--- a/Frontend/src/Usecase/Allpages/table.css
+++ b/Frontend/src/Usecase/Allpages/table.css
@@ -138,7 +138,7 @@
   table,th,td{
     border: 1px groove #c6cec8;
     border-collapse: collapse;
-    padding: 5px;
+    padding: 10px;
     font-size: 9px;
 
   }
@@ -232,34 +232,35 @@
     
   }
   #down-al{
-    width: clamp(30px, 50vw, 100px);
-    height: 2.3rem;
+    width: clamp(30px, 50vw, 90px);
+    height: 2.0rem;
     border:1px groove ;
     border-color:transparent;
     color: white;
     border-radius: 5px;
     margin: -0.625rem auto;
     position: relative;
-    top: 50px;
+    font-size: 12px;
+    top: 35px;
     left:1240px;
     transition: all 250ms;
     font-family: sans-serif;
-    background-color:  #ffffff;
+    background-color:  #38d845;
   }
   #down-al2{
-    width: clamp(30px, 50vw, 100px);
-    height: 2.3rem;
+    width: clamp(30px, 50vw, 90px);
+    height: 2.0rem;
     border:1px groove ;
     border-color:transparent;
     color: white;
     border-radius: 5px;
     margin: -0.625rem auto;
     position: relative;
-    top: 500px;
-    left:235px;
+    top: 10px;
+    left:240px;
     transition: all 250ms;
     font-family: sans-serif;
-    background-color:  #ffffff;
+    background-color:  #38d845;
   }
   #taskbtn{
     position: relative;
