--- a/Frontend/src/Usecase/projectdetails/project.css
+++ b/Frontend/src/Usecase/projectdetails/project.css
@@ -313,6 +313,13 @@
     border: 1px solid #17A248;
    
   } */
+  #reqfield{
+    position: relative;
+    font-size: 11px;
+    color: #313332;
+    letter-spacing: 1px;
+    top: 3px;
+  }
   #sub{
     width: clamp(100px, 50vw, 130px);
     height: 2.3rem;
@@ -336,7 +343,7 @@
   #form{
     position: relative;
     left:75px;
-    top:20px;
+    top:-5px;
    
     
   }
@@ -344,12 +351,13 @@
  
 
   #file1{
-    border: 1px groove grey;
+    border: none;
   width: 300px;
   height: 50px;
-  color: grey;
+  color: rgb(97, 93, 93);
  padding-left: 55px;
- border-color: rgb(198, 190, 190);
+ position: relative;
+ top: -15px;
  border-radius: 5px;
  display: inline-block;
  cursor: pointer;
@@ -389,7 +397,7 @@
       height:570px; 
     position: relative;
     left: 500px;
-    top: 0px;
+    top: 3px;
      
     border-radius: 15px;
     border: 1px solid rgba(255, 255, 255, 0.2); /* Transparent border */
