--- a/Frontend/src/Usecase/Allpages/usecase.css
+++ b/Frontend/src/Usecase/Allpages/usecase.css
@@ -15,18 +15,17 @@
     position: relative;
     top: 30px;
    left: 90px;
-    text-transform: uppercase;
     font-size: 25px;
-    Font-family:  "Zoho_Puvi_Bold"; 
+    font-family: Georgia, 'Times New Roman', Times, serif; 
     letter-spacing: 4px;
     font-weight: 500;
-    color:#7be29a;
+    color:#719ece ;
 
-    background: #f6f6f9;
-    background: linear-gradient(to right,  #807b7b 100%, #454647 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    /* background: #f6f6f9; */
+    /* background: linear-gradient(to right,  #807b7b 100%, #454647 100%); */
+  
 }
+
 
 .slide-In {
     animation: slide 3s ease-out;
