--- a/Frontend/src/Usecase/Allpages/table.css
+++ b/Frontend/src/Usecase/Allpages/table.css
@@ -35,9 +35,9 @@
   height:40px;
   padding: 12px;
   border: none;
-  border-radius: 4px;
+  
   background-color: #fff;
-
+  border-radius: 25px;
   box-shadow: 2px 2px 7px 0 rgb(0, 0, 0, 0.2);
   outline: none;
   color: rgb(177, 171, 171);
@@ -56,8 +56,9 @@
   }
   #search-icon{
     position: relative;
-    top: -50px;
-    right: 15px;
+    top: 38px;
+    right:245px;
+    color: rgb(119, 116, 116);
   }
   #search-close{
     position: relative;
@@ -70,6 +71,7 @@
   font-size: 11px;
   width: 120px;
   background-color: rgba(247, 247, 247, 0.945);
+  
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   color: rgb(99, 99, 99);
   /* background-color: #4ae459; */
@@ -138,7 +140,7 @@
   table,th,td{
     border: 1px groove #c6cec8;
     border-collapse: collapse;
-    padding: 10px;
+    padding: 9px;
     font-size: 9px;
 
   }
@@ -314,3 +316,25 @@
     padding: 20px;
   }
   
+  .task1 {
+    position: relative;
+    cursor: pointer;
+  }
+  
+  .task1:hover::after {
+    content: "View Task";
+    position: absolute;
+    top: 70%;
+    left: 45%;
+    transform: translateX(-50%);
+    background-color: rgba(43, 91, 223, 0.7);
+    color: rgb(255, 255, 255);
+    padding: 4px 8px;
+    border-radius: 4px;
+    font-size: 11px;
+    white-space: nowrap;
+    transition: all 0.4ms ease; /* Adds a smooth transition effect */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    z-index: 999; /* Ensures the edit text appears above other elements */
+  }
+ 
