--- a/Frontend/src/Usecase/Allpages/user.css
+++ b/Frontend/src/Usecase/Allpages/user.css
@@ -404,3 +404,70 @@
       
       
     }
+    .edit {
+      position: relative;
+      cursor: pointer;
+    }
+    
+    .edit:hover::after {
+      content: "Edit";
+      position: absolute;
+      top: 70%;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: rgba(43, 91, 223, 0.7);
+      color: rgb(255, 255, 255);
+      padding: 4px 8px;
+      border-radius: 4px;
+      font-size: 11px;
+      white-space: nowrap;
+      transition: all 0.4ms ease; /* Adds a smooth transition effect */
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+      z-index: 999; /* Ensures the edit text appears above other elements */
+    }
+   
+    .taskadd {
+      position: relative;
+      cursor: pointer;
+    }
+    
+    .taskadd:hover::after {
+      content: "Add Task";
+      position: absolute;
+      top: 70%;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: rgba(43, 91, 223, 0.7);
+      color: rgb(255, 255, 255);
+      padding: 4px 8px;
+      border-radius: 4px;
+      font-size: 11px;
+      white-space: nowrap;
+      transition: all 0.4ms ease; /* Adds a smooth transition effect */
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+      z-index: 999; /* Ensures the edit text appears above other elements */
+    }
+   
+    .task {
+      position: relative;
+      cursor: pointer;
+    }
+    
+    .task:hover::after {
+      content: "View Task";
+      position: absolute;
+      top: 70%;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: rgba(43, 91, 223, 0.7);
+      color: rgb(255, 255, 255);
+      padding: 4px 8px;
+      border-radius: 4px;
+      font-size: 11px;
+      white-space: nowrap;
+      transition: all 0.4ms ease; /* Adds a smooth transition effect */
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+      z-index: 999; /* Ensures the edit text appears above other elements */
+    }
+   
+    
