--- a/Frontend/src/Usecase/Navbar/navbar.css
+++ b/Frontend/src/Usecase/Navbar/navbar.css
@@ -24,6 +24,7 @@
     height: 55px;
     color: rgb(245, 245, 245);
     background: linear-gradient(90deg, rgb(160, 219, 214) 10%, rgb(148, 160, 216) 100%);
+    /* background-color: #4ce26d; */
    
     
 }
