--- a/Frontend/src/Usecase/projectdetails/project.css
+++ b/Frontend/src/Usecase/projectdetails/project.css
@@ -343,7 +343,7 @@
   #form{
     position: relative;
     left:75px;
-    top:-5px;
+    top:4px;
    
     
   }
@@ -377,11 +377,12 @@
     font-size: larger;
    }
    #description,#email,#title,#tool,#startdate,#enddate,#file1{
-    font-size: 13px;
+    font-size: 12px;
     /* border: 1px ridge rgb(76, 111, 151); */
    }
    ::placeholder{
     font-size: 10px;
+    font-family: "'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif" 
    }
    #success{
     position: relative;
