--- a/Frontend/src/Usecase/projectdetails/project.css
+++ b/Frontend/src/Usecase/projectdetails/project.css
@@ -398,7 +398,7 @@
       height:570px; 
     position: relative;
     left: 500px;
-    top: 3px;
+    top: 3%;
      
     border-radius: 15px;
     border: 1px solid rgba(255, 255, 255, 0.2); /* Transparent border */
