--- a/Frontend/src/Usecase/Allpages/usecase.css
+++ b/Frontend/src/Usecase/Allpages/usecase.css
@@ -1,4 +1,4 @@
-#all-container{
+/* #all-container{
     width: 200px;
     height: 200px;
     margin-left: 150px;
@@ -6,25 +6,12 @@
     border: 1px groove rgb(223, 230, 233);
 }#div-box{
     
-    border: 1px solid rgba(255, 255, 255, 0.2); /* Transparent border */
-    background: rgba(255, 255, 255, 0.15); /* Transparent background */
-    backdrop-filter: blur(5px); /* Background blur */
-    box-shadow: 2px 7px 7px 5 rgba(31, 38, 135, 0.37); /* Box shadow */
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    background: rgba(255, 255, 255, 0.15); 
+    backdrop-filter: blur(5px); 
+    box-shadow: 2px 7px 7px 5 rgba(31, 38, 135, 0.37);
 }
-#title1{
-    position: relative;
-    top: 30px;
-   left: 90px;
-    font-size: 25px;
-    font-family: Georgia, 'Times New Roman', Times, serif; 
-    letter-spacing: 4px;
-    font-weight: 500;
-    color:#4072a7 ;
 
-    /* background: #f6f6f9; */
-    /* background: linear-gradient(to right,  #807b7b 100%, #454647 100%); */
-  
-}
 
 
 .slide-In {
@@ -72,4 +59,60 @@
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
     backdrop-filter: blur(4px);
     border-radius: 10px;
+} */
+
+#usecase-Form{
+  width: 100px;
+  height: 100px;
+  /* border: 1px groove grey; */
+  position: relative;
+  left: 850px;
+  top: -5px;
+
+
+}
+#attach-file{
+  margin-top: 25px;
+  position: relative;
+  background-color: #4d81b9;
+  height: 40px;
+  width: 140px;
+
+
+}
+#add-btn{
+  margin-top: 25px;
+  position: relative;
+  left: 20px;
+  width: 140px;
+  background-color: rgb(27, 216, 59);
+  height: 40px;
+}
+#title1{
+  position: relative;
+  top:230px;
+  left: 80px;
+  font-size: 33px;
+  font-family: Georgia, 'Times New Roman', Times, serif; Font-family:  "Zoho_Puvi_Bold"; 
+  letter-spacing: 4px;
+ 
+  font-weight: 500;
+  color:#4072a7 ;
+ 
+
+}
+#filled-basic,#outlined-basic,#outlined-multiline-static,#demo-multiple-name-label,#sel,#demo-simple-select{
+  font-size: 12px;
+  color: gray;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+#back-btn{
+ 
+  top: 60px;
+  left: 1245px;
+  width: 70px;
+  height: 30px;
+  text-align: center;
+  bottom: 10px;
+ 
 }
