--- a/Frontend/src/Usecase/Title/title.css
+++ b/Frontend/src/Usecase/Title/title.css
@@ -79,6 +79,7 @@
        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
        letter-spacing: 1px;
        font-weight: bold;
+       /* font-family: TWK Everett, Helvetica, Arial, sans-serif; */
        
       
        
