--- a/Frontend/src/Usecase/Allpages/table.css
+++ b/Frontend/src/Usecase/Allpages/table.css
@@ -5,10 +5,11 @@
   position: relative;
   bottom: 40px;
   border-collapse: collapse;
-  max-height: 330px;
-  top: 85px;
+  max-height: 350px;
+  top: 90px;
   width: 1200px;
   left: 145px;
+  padding: 10px;
 }
 ::placeholder{
   letter-spacing: 1px;
@@ -41,10 +42,9 @@
   /* box-shadow: 2px 2px 7px 0 rgb(0, 0, 0, 0.2); */
   outline: none;
   color: rgb(177, 171, 171);
-  font-family: 'montserrat','sans-serif';
   position: relative;
-  top:35px;
-  left:500px;
+  top:25px;
+  left:400px;
   border-bottom: 1px groove rgb(190, 186, 186);
 
   
@@ -63,19 +63,19 @@
   }
   #search-icon{
     position: relative;
-    top: 38px;
-    left:195px;
+    top: 34px;
+    left:95px;
     color: rgb(119, 116, 116);
   }
   #search-close{
     position: relative;
-    top: 41px;
-    left: 465px;
+    top: 37px;
+    left: 370px;
   }
 
   
 #thh {
-  font-size: 10px;
+  font-size: 12px;
   width: 120px;
   /* background-color:#a5a5a5; */
   position: sticky;
@@ -83,14 +83,13 @@
   z-index: 2;
   letter-spacing: 2px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  color: rgb(0, 0, 0);
+  color: rgb(119, 114, 114);
   /* background-color: #4ae459; */
   letter-spacing: 1px;
   position: sticky;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  height: 0px;
-  font-family:'Source Sans Pro', sans-serif;
-  text-transform: uppercase;
+  /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
+  height: 5px;
+ 
   font-weight: 500;
  
   
@@ -116,14 +115,11 @@
     height: 60px;
     text-align: center;
     height: 20px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 10px;
-    /* text-transform: uppercase; */
-    color: rgb(41, 39, 39);
-    /* background-color:#f8f8fd; */
-    font-weight:500;
+     font-size: 12px;
+    color: rgb(97, 94, 94);
+    /* font-weight:500; */
     letter-spacing: 1px;
-    /* font-family: 'PuviBold', Roboto, sans-serif; */
+    /* font-family: 'PuviLight', Roboto, sans-serif; */
   
    
    
@@ -137,7 +133,7 @@
     text-align: center;
     height: 30px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 11px;
+    font-size: 12px;
     color: rgb(95, 90, 90);
     font-weight: 500;
     
@@ -168,10 +164,13 @@
     border: 1px solid rgba(145, 140, 140, 0.3);
 
     border-collapse: collapse;
-    padding: 12px;
-    font-size: 9px;
+   padding: 10px;
+
     
 
+  }
+  th{
+    padding: 12px;
   }
   table{
     border-radius: 10px;
@@ -195,8 +194,8 @@
  overflow: auto;
 }
   #deac-btn1{
-    width: clamp(50px, 40vw, 90px);
-    height: 1.9rem;
+    width: clamp(50px, 40vw, 80px);
+    height: 1.8rem;
   
     border:1px groove ;
     border-color: #f7f8f7;
@@ -205,7 +204,7 @@
     margin: -0.625rem auto;
     transition: all 250ms;
     font-family: sans-serif;
-    background-color:  #e6797f;
+    background-color: rgb(241, 67, 67);
     position: relative;
     top: -1px;
     left: 1px;
@@ -216,8 +215,8 @@
     font-size: 11px;
   }
   #deac-btn2{
-    width: clamp(50px, 40vw, 90px);
-    height: 1.9rem;
+    width: clamp(50px, 40vw, 80px);
+    height: 1.8rem;
   
     border:1px groove ;
     border-color: #f7f8f7;
@@ -276,7 +275,7 @@
     position: relative;
     font-size: 12px;
     top: 35px;
-    left:1240px;
+    left:1115px;
     transition: all 250ms;
     font-family: sans-serif;
     background-color:  #38d845;
@@ -369,4 +368,21 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     z-index: 999; /* Ensures the edit text appears above other elements */
   }
- 
+ #all{
+
+  position: relative;
+  left: 155px;
+  top: 60px;
+  color: rgb(250, 8, 8);
+ }
+ #all-icon{
+ margin-left: 5px;
+ margin-top: 7px;
+
+ }
+ #search1{
+  position: relative;
+  top: 40px;
+  left: 980px;
+  color: rgb(100, 97, 97);
+ }
